--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,20 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
+    <link rel='stylesheet' href='/stylesheets/app.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, fuga.</p>
+    
+    <% include partials/header.ejs %>
+    <% include partials/content.ejs %>
+    <% include partials/footer.ejs %>
+    
+    <!-- JavaScript Section -->
+    <script src="/javascripts/jquery.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/custom.js"></script>
   </body>
 </html>
