--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,14 @@
-<footer class="container">
-    <p>&copy; CopyRight 2015</p>
+<footer>
+    <div class="panel panel-default">
+  <div class="panel-body">
+    <ol class="breadcrumb">
+      <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/products">Products</a></li>
+        <li><a href="/services">Services</a></li>
+        <li><a href="/contact">Contact</a></li>
+    </ol>
+  </div>
+  <div class="panel-footer">&copy; Copyright 2015</div>
+</div>
 </footer>
