--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,4 +1,4 @@
- <div id="home" class="row">
+<div id="home" class="row">
         <br /><br /><br />
 
         <aside class="large-4 small-6 columns">
@@ -26,32 +26,31 @@
             </div>
         </header>
     </div>
-    <div id="project" class="row">
-        <br /><br /><br />
-
-        <h2>About Me</h2>
-        <aside id="project1" class="large-6 small-6 columns">
-            <p>
-                With 7 years of software development experience, I pride myself as a skilled software engineer and a hands-on software developer. I have worked as a project team leader and assistant lead in my previous projects. I am well versed in software development such as design, development, and testing. My technical expertise includes C/C++, and JAVA in UNIX/Linux and Windows environments. For being a better qualified software engineer, I have made an effort constantly studying mobile platform.
-            </p>
-        </aside>
-        <header class="large-6 small-6 columns">
-            <img src="images/me.jpg" alt="My image" height="150" width="200" />
-        </header>
-    </div>
-    <div id="resume" class="row">
-        <br /><br /><br />
-        <h2>Down Load Resume</h2>
-        <article class="large-12 columns">
-            
+    <div id="contact" class="row">
+        <div class="row">
+            <h2>Contact Info</h2>
+            <aside id="project1" class="large-6 small-6 columns">
+                <h3>E-mail</h3>
                 <p class=MsoNormal style='margin-right:-20.05pt;line-height:115%'>
                     <b>
                         <span lang=EN-US
                               style='font-size:11.0pt;line-height:115%;font-family:"Arial Black","sans-serif"'>
-                            <a href="assets/Resume(Kyounghyun Ryu).pdf">Click Down</a>
+                            <a href="mailto:sean.k.ryu@gmail.com">sean.k.ryu@gmail.com</a>
                         </span>
                     </b>
                 </p>
-               
-    </article>
+                <h3>Phone</h3>
+                <p class=MsoNormal style='margin-right:-20.05pt;line-height:115%'>
+                    <b>
+                        <span lang=EN-US
+                              style='font-size:11.0pt;line-height:115%;font-family:"Arial Black","sans-serif"'>
+                            <a href="">647 274 ****</a>
+                        </span>
+                    </b>
+                </p>
+            </aside>
+            <header class="large-6 small-6 columns">
+                <div id="googleMap" style="width:500px;height:380px;"></div>
+            </header>
+        </div>
     </div>
