--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,33 +1,39 @@
-<header>
-   <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/products">Products</a></li>
-        <li><a href="/services">Services</a></li>
-        <li><a href="/contact">Contact</a></li>
-        
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<div class="container">
-       <nav>
-           
-       </nav>
-        <h1><%= title %></h1>
-        
-</div>
-</header>
+<header id="header">
+        <div class="container">
+            <!-- Logo -->
+            <!-- Navigation -->
+            <nav class="top-bar" data-topbar role="navigation">
+                <ul class="title-area">
+                    <li class="name">
+                        <h1><a href="index.html#home">HOME</a></h1>
+                    </li>
+                    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+                    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+                </ul>
+                <section class="top-bar-section">
+                    <!-- Right Nav Section -->
+                    <ul class="right">
+                        <li class="active"><a href="/about" class="buttonNew">About Me</a></li>
+                        <li class="name"><a href="index.html#education" class="buttonNew">Educations</a></li>
+                        <li class="name"><a href="index.html#skills" class="buttonNew">Skills</a></li>
+                        <li class="name"><a href="/products" class="buttonNew">Projects</a></li>
+                        <!--<li class="has-dropdown">-->
+                        <!--    <a href="index.html#project" class="buttonNew">Works</a>-->
+                        <!--    <ul class="dropdown">-->
+                        <!--        <li><a href="/products" class="buttonNew">Hydroelectric power plant control system</a></li>-->
+                        <!--        <li class="buttonNew"><a href="/products#project2">Human resource management system</a></li>-->
+                        <!--        <li class="buttonNew"><a href="/products#project3">Airline booking system</a></li>-->
+                        <!--    </ul>-->
+                        <!--</li>-->
+                        <li class="name"><a href="https://github.com/SEAN-KH-RYU/Portfolio" class="buttonNew">Github</a></li>
+                        <li class="name"><a href="/contact" class="buttonNew">Contact Me</a></li>
+                    </ul>
+                    <!-- Left Nav Section -->
+                    <!--<ul class="left">
+                        <li><a href="#">Left Nav Button</a></li>
+                    </ul>
+                    -->
+                </section>
+            </nav>
+        </div>
+    </header>
