--- a/views/partials/products.ejs
+++ b/views/partials/products.ejs
@@ -1,1 +1,116 @@
-Products
+<div id="project" class="row">
+        <br /><br /><br />
+
+        <h2>Projects</h2>
+        <aside id="project1" class="large-6 small-6 columns">
+
+            <h5>Hydroelectric power plant control system</h5>
+            <ul>
+                <li>Spearheaded creation of cross-platform interface for other departments</li>
+                <li>Developed and supported application in server-side and client-side using C++ and Java</li>
+                <li>Managed application to display whole system using UNIX OS and Java on 1206 inch display</li>
+                <li>Designed database using Oracle and reduced searching speed of data</li>
+                <li>Using Java, C++, Java Swing, Struts framework</li>
+            </ul>
+        </aside>
+        <header class="large-6 small-6 columns">
+            <div class="orbit-container">
+                <ul class="example-orbit-content" data-orbit>
+                    <li data-orbit-slide="headline-1">
+                        <img src="images/work1.png" alt="slide 1" />
+                        <div class="orbit-caption">
+                            12592 X 2029 display
+                        </div>
+                    </li>
+                    <li data-orbit-slide="headline-2">
+                        <img src="images/work2.png" alt="slide 2" />
+                        <div class="orbit-caption">
+                            Enlargement
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </header>
+    </div>
+    <div id="project2" class="row">
+        <br /><br /><br />
+
+        <aside class="large-6 small-6 columns">
+            <h5>Human resource management system</h5>
+            <ul>
+                <li>Designed, tested GUI mobile application using Andriod platform</li>
+                <li>Developed main system to connect sub-system</li>
+                <li>Designed detail database and user interface</li>
+            </ul>
+        </aside>
+        <header class="large-6 small-6 columns">
+            <div class="orbit-container">
+                <ul class="example-orbit-content" data-orbit>
+                    <li data-orbit-slide="headline-1">
+                        <img src="images/hrms1.png" alt="slide 1" />
+                        <div class="orbit-caption">
+                            Main
+                        </div>
+                    </li>
+                    <li data-orbit-slide="headline-2">
+                        <img src="images/hrms2.png" alt="slide 2" />
+                        <div class="orbit-caption">
+                            Search employee
+                        </div>
+                    </li>
+                    <li data-orbit-slide="headline-3">
+                        <img src="images/hrms3.png" alt="slide 3" />
+                        <div class="orbit-caption">
+                            Calender
+                        </div>
+                    </li>
+                    <li data-orbit-slide="headline-4">
+                        <img src="images/hrms4.png" alt="slide 4" />
+                        <div class="orbit-caption">
+                            Configration
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </header>
+    </div>
+    <div id="project3" class="row">
+        <br /><br /><br />
+
+        <aside class="large-6 small-6 columns">
+            <h5>Airline booking system</h5>
+            <ul>
+                <li>Developed prototype web application for new Windows OS</li>
+                <li>Tested environment of operation system and electronic equipment (QR code reader, Barcode ticket reader, etc.)</li>
+                <li>Using Spring, EJB framework, Ajax, Java, and JSP</li>
+            </ul>
+            <p>
+                <label>Website:</label>
+                <a href='http://www.ana.co.jp/asw/index.jsp?type=e'>http://www.ana.co.jp/asw/index.jsp?type=e</a>
+            </p>
+        </aside>
+        <header class="large-6 small-6 columns">
+            <div class="orbit-container">
+                <ul class="example-orbit-content" data-orbit>
+                    <li data-orbit-slide="headline-1">
+                        <img src="images/ana1.png" alt="slide 1" />
+                        <div class="orbit-caption">
+                            Main
+                        </div>
+                    </li>
+                    <li data-orbit-slide="headline-2">
+                        <img src="images/ana2.png" alt="slide 2" />
+                        <div class="orbit-caption">
+                            View Reservation
+                        </div>
+                    </li>
+                    <li data-orbit-slide="headline-3">
+                        <img src="images/ana3.png" alt="slide 3" />
+                        <div class="orbit-caption">
+                            About
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </header>
+    </div>
