--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,46 @@
 <footer>
-    <div class="panel panel-default">
-  <div class="panel-body">
-    <ol class="breadcrumb">
-      <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/products">Products</a></li>
-        <li><a href="/services">Services</a></li>
-        <li><a href="/contact">Contact</a></li>
-    </ol>
-  </div>
-  <div class="panel-footer">&copy; Copyright 2015</div>
-</div>
+    <div id="contact" class='footer'>
+        <div class='container'>
+            <div class='row'>
+                <div class='col-md-12'>
+                    <div class="icon-bar five-up">
+                        <a href="https://plus.google.com/u/0/102549438948363151377/posts" class="item">
+                            <img src="images/googleplus.png" />
+                            <label>Google plus</label>
+                        </a>
+                        <a href="skype:eva700ca?userinfo" class="item">
+                            <img src="images/skype.png" />
+                            <label>Skype</label>
+                        </a>
+                        <a href="https://twitter.com/share" class="item">
+                            <img src="images/twitter.png" />
+                            <label>Twitter</label>
+                        </a>
+                        <a href="https://ca.linkedin.com/in/SeanKRyu" class="item">
+                            <img src="images/linkedin.png" />
+                            <label>Linkedin</label>
+                        </a>
+                        <a href="mailto:sean.k.ryu@gmail.com.com" class=" item">
+                            <img src="images/mail.png" />
+                            <label>Mail</label>
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class='col-md-12 ' align="center">
+                    <p class='subheader'>
+                        Copyright &copy;2014 - 2015
+                        <a href='http://sean.kyounghyun.ryu.net'>Sean Kyounghyun Ryu</a>
+                    </p>
+                    <p class='subheader'>
+                        Made with <a href="http://getbootstrap.com">Bootstrap</a>,
+                        <a href="http://foundation.zurb.com/">Foungdation</a>, <a href="https://angularjs.org/">AngularJS</a> and
+                        <a href="http://expressjs.com/">ExpressJS</a>.
+                    </p>
+                    <p><a href="https://github.com/SEAN-KH-RYU/expressDemo">Fork this on Github</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
