--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,14 +8,14 @@
                         <h1><a href="index.html#home">HOME</a></h1>
                     </li>
                     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+                    <li class="toggle-topbar menu-icon"><a href="/"><span>Menu</span></a></li>
                 </ul>
                 <section class="top-bar-section">
                     <!-- Right Nav Section -->
                     <ul class="right">
                         <li class="active"><a href="/about" class="buttonNew">About Me</a></li>
-                        <li class="name"><a href="index.html#education" class="buttonNew">Educations</a></li>
-                        <li class="name"><a href="index.html#skills" class="buttonNew">Skills</a></li>
+                        <li class="name"><a href="/services" class="buttonNew">Educations</a></li>
+                        <li class="name"><a href="/skills" class="buttonNew">Skills</a></li>
                         <li class="name"><a href="/products" class="buttonNew">Projects</a></li>
                         <!--<li class="has-dropdown">-->
                         <!--    <a href="index.html#project" class="buttonNew">Works</a>-->
@@ -25,7 +25,7 @@
                         <!--        <li class="buttonNew"><a href="/products#project3">Airline booking system</a></li>-->
                         <!--    </ul>-->
                         <!--</li>-->
-                        <li class="name"><a href="https://github.com/SEAN-KH-RYU/Portfolio" class="buttonNew">Github</a></li>
+                        <li class="name"><a href="https://github.com/SEAN-KH-RYU/expressDemo" class="buttonNew">Github</a></li>
                         <li class="name"><a href="/contact" class="buttonNew">Contact Me</a></li>
                     </ul>
                     <!-- Left Nav Section -->
