--- a/views/partials/services.ejs
+++ b/views/partials/services.ejs
@@ -1,1 +1,60 @@
-Services
+    <div id="education" class="row">
+        <br /><br /><br />
+
+        <article class="large-12 columns">
+            <h2>Educations</h2>
+            <p class=MsoNormal style='margin-right:-20.05pt;line-height:115%'>
+                <b>
+                    <span lang=EN-US
+                          style='font-size:11.0pt;line-height:115%;font-family:"Arial Black","sans-serif"'>
+                        Software
+                        Engineering Technology Advanced Diploma
+                    </span>
+                </b>&nbsp;&nbsp;&nbsp;&nbsp;2013<span lang=EN-US style='font-family:"Arial","sans-serif"'>&nbsp;&nbsp;to</span><span lang=EN-US style='font-family:"Arial","sans-serif";'>&nbsp;&nbsp;Present</span><b>
+                </b>
+            </p>
+            <p class=MsoNormal style='line-height:115%'>
+                <span lang=EN-US style='font-size:11.5pt;line-height:115%;font-family:"Arial","sans-serif"'>
+                    Centennial College, Toronto, ON
+                </span>
+            </p>
+            <p class=MsoNormal style='text-indent:5.0pt;line-height:115%'>
+                <b>
+                    <span lang=EN-US
+                          style='font-size:10.0pt;line-height:115%;font-family:"Arial","sans-serif"'>
+                        Relevant Courses include:
+                    </span>
+                </b>
+            </p>
+            <ul type=square>
+                <li class=MsoNormal style='text-align:justify;'>
+                    <span lang=EN-US style='font-size:11.0pt; font-family:"Arial","sans-serif"'>Advanced Database Concepts</span>
+                </li>
+                <li class=MsoNormal style='text-align:justify;'>
+                    <span lang=EN-US style='font-size:11.0pt; font-family:"Arial","sans-serif"'>JAVA Programming</span>
+                </li>
+                <li class=MsoNormal style='text-align:justify;'>
+                    <span lang=EN-US style='font-size:11.0pt; font-family:"Arial","sans-serif"'>Web Application Development</span>
+                </li>
+                <li class=MsoNormal style='text-align:justify;'>
+                    <span lang=EN-US style='font-size:11.0pt; font-family:"Arial","sans-serif"'>Object Oriented Software Engineering</span>
+                </li>
+            </ul>
+            <p class=MsoNormal style='margin-right:15.25pt;text-align:justify;line-height:115%'>
+                <b>
+                    <span lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Arial Black","sans-serif"'>
+                        Bachelor of Electrical, Electronic, Information Engineering
+                    </span>
+                </b>
+                <span lang=EN-US style='font-family:"Arial","sans-serif"'>&nbsp;&nbsp;&nbsp;&nbsp;2005</span>
+            </p>
+            <p class=MsoNormal style='line-height:115%'>
+                <span class=SpellE>
+                    <span lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Arial","sans-serif"'>Kongju</span>
+                </span><span lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Arial","sans-serif"'>
+                    <span class=SpellE>Naitional</span> University, <span class=SpellE>Gongju</span>,
+                    South Korea
+                </span>
+            </p>
+        </article>
+    </div>
