--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -10,7 +10,7 @@
                     <span class='highlight'>Kyounghyun</span>Ryu
                 </h1>
                 <h2>
-                    senior software engineer<sup>*</sup>
+                    <%=menuActive%> senior software engineer<sup>*</sup>
                 </h2>
                 <h3>
                     <p class='explanation'>
@@ -25,8 +25,8 @@
                 </h3>
             </div>
         </header>
-    </div>
-    <div id="contact" class="row">
+</div>
+<div id="contact" class="row">
         <div class="row">
             <h2>Contact Info</h2>
             <aside id="project1" class="large-6 small-6 columns">
@@ -53,4 +53,4 @@
                 <div id="googleMap" style="width:500px;height:380px;"></div>
             </header>
         </div>
-    </div>
+</div>
