--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
             <nav class="top-bar" data-topbar role="navigation">
                 <ul class="title-area">
                     <li class="name">
-                        <h1><a href="index.html#home">HOME</a></h1>
+                        <h1><a href="/">HOME</a></h1>
                     </li>
                     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
                     <li class="toggle-topbar menu-icon"><a href="/"><span>Menu</span></a></li>
@@ -13,8 +13,8 @@
                 <section class="top-bar-section">
                     <!-- Right Nav Section -->
                     <ul class="right">
-                        <li class="active"><a href="/about" class="buttonNew">About Me</a></li>
-                        <li class="name"><a href="/services" class="buttonNew">Educations</a></li>
+                        <li class="name"><a href="/about" class="buttonNew">About Me</a></li>
+                        <li class="<%=menuActive%>"><a href="/services" class="buttonNew">Educations</a></li>
                         <li class="name"><a href="/skills" class="buttonNew">Skills</a></li>
                         <li class="name"><a href="/products" class="buttonNew">Projects</a></li>
                         <!--<li class="has-dropdown">-->
